--- a/registro.html
+++ b/registro.html
@@ -23,8 +23,8 @@
             <form action="./registro_concluido.html" class="formulario flex flex--column">
                 <fieldset>
                     <legend class="form__label">Información básica</legend>
-                    <div class="input-container">
-                        <input name="name" id="name" class="input" type="text" placeholder="Nombre" required >
+                    <div class="input-container ">
+                        <input name="name" id="name" class="input" type="text" placeholder="Nombre" required>
                         <label class="input-label" for="name">Nombre</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
@@ -34,7 +34,7 @@
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="input-container">
-                        <input name="password" id="password" class="input" type="password" placeholder="Contraseña"  minlength="6" maxlength="12" required>
+                        <input name="password" id="password" class="input" type="password" placeholder="Contraseña" pattern ="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?!.*[ !@#$%^&*_=+-]).{6,12}$" title="Al menos 6 caracteres, máximo 12, debe contener una letra minúscula, una letra mayúscula, un número y no puede contener caracteres especiales" required>
                         <label class="input-label" for="password">Contraseña</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
@@ -42,8 +42,8 @@
                 <fieldset>
                     <legend class="form__label">Información personal</legend>
                     <div class="input-container">
-                        <input name="birth" id="birth" class="input" type="text" placeholder="Fecha de nacimento">
-                        <label class="input-label" for="birth">Fecha de nacimiento</label>
+                        <input name="birth" id="birth" class="input" type="date" placeholder="Fecha de nacimento" data-tipo ="nacimento">
+                        <label class="input-label" for="birth" required >Fecha de nacimiento</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="input-container">
@@ -74,5 +74,9 @@
             </form>
         </section>
     </main>
+    
+    <script src="./scripts/app.js" type="module"></script>
+    <!--
+    <script src="./scripts/validaciones.js" ></script> -->
 </body>
 </html>
